Wizard: make sure its scrollable on small screens

--- a/app/assets/stylesheets/zammad.scss
+++ b/app/assets/stylesheets/zammad.scss
@@ -6444,6 +6444,9 @@ footer {
     @extend .u-textTruncate;
   }
 
+.wizard {
+  margin: auto; // makes sure that the wizard is scrollable
+}
 
 .wizard-logo {
   fill: white;
